<resources>
    <string name="app_name">Kursach</string>
    <string name="title_activity_main_screen">MainScreenActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_personalCabinet">Personal cabinet</string>
    <string name="menu_addVacancy">Add vacancy</string>
    <string name="menu_filter">Filter</string>
    <string name="my_vacancies">My vacancies</string>
    <string name="assigned_vacancies">Assigned vacancies</string>
    <string name="all_vacancies">All vacancies</string>

    <string name="login">Login:</string>
    <string name="pass">Password:</string>
    <string name="newPass">New password:</string>
    <string name="changePassText">Change password</string>
    <string name="confPass">Confirm password:</string>
    <string name="submit">Submit</string>
    <string name="usernameText">Username:</string>
    <string name="username">USERNAME</string>
    <string name="acceptBtn">Accept</string>
    <string name="acceptNewPass">Accept new password</string>
    <string name="backBtn">Back</string>
    <string name="registryBtn">Registry</string>
    <string name="loginBtn">Login</string>
    <string name="fillNextFields">Field next fields</string>
    <string name="shortDesc">Short description:</string>
    <string name="author">Author:</string>
    <string name="fullDesc">Full description:</string>
    <string name="price">Price:</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>