<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--Add here all menu options-->
    <item
        android:id="@+id/personalCabinet"
        android:icon="@drawable/ic_baseline_personal_cabinet"
        android:title="@string/menu_personalCabinet" />
    <item
        android:id="@+id/addVacancy"
        android:icon="@drawable/ic_baseline_add_circle_24"
        android:title="@string/menu_addVacancy" />
    <item
        android:id="@+id/assignedVacancies"
        android:icon="@drawable/ic_baseline_asigned_vacancies"
        android:title="@string/assigned_vacancies" />
    <item
        android:id="@+id/myVacancies"
        android:icon="@drawable/ic_baseline_my_vacancies"
        android:title="@string/my_vacancies" />
    <item
        android:id="@+id/allVacancies"
        android:icon="@drawable/all_vacancies"
        android:title="@string/all_vacancies" />
</menu>