<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_personal_cabinet"
            android:title="@string/menu_personalCabinet" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_add_circle_24"
            android:title="@string/menu_addVacancy" />
        <item
            android:id="@+id/nav_assigned_vacancies"
            android:icon="@drawable/ic_baseline_asigned_vacancies"
            android:title="@string/menu_addVacancy" />
        <item
            android:id="@+id/nav_my_vacancies"
            android:icon="@drawable/ic_baseline_my_vacancies"
            android:title="@string/menu_addVacancy" />
        <item
            android:id="@+id/nav_all_vacancies"
            android:icon="@drawable/all_vacancies"
            android:title="@string/all_vacancies" />
    </group>
</menu>